--- a/week1/public/css/stylesV2.css
+++ b/week1/public/css/stylesV2.css
@@ -10,7 +10,12 @@ body {
 [data-container=container] {
   display: flex;
   flex-wrap: wrap;
-  margin: auto;
+  margin: 0px auto;
+}
+
+header{
+
+
 }
 
 section {
@@ -59,6 +64,18 @@ p {
   background-color: #ff0000;
   border-radius: 4px;
   color: white;
+
+}
+
+[data-button ='filter']{
+  margin: 20px;
+  padding: 20px;
+  background-color: orange;
+  text-align: center;
+  color: white;
+  display: flex;
+
+
 
 }
 
